<resources>
    <string name="app_name">DestinAsyik</string>
    <string name="tittle">DestinAsyik.</string>
    <string name="sign_In">Sign In</string>
    <string name="deskripsi">Please login to continue to your account.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textdetail">"Have you ever been on holiday to the Greek islands before? There’s a good chance you may have come across Santorini before. "</string>
    <string name="register">Register</string>
    <string name="sign_Up">Sign Up</string>
    <string name="deskripsi_reg">Sign up to enjoy the feature of Revolutie</string>
    <string name="username">Username</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="city">City</string>
    <string name="_12km">12km</string>
    <string name="book">Book Now</string>
    <string name="tittle_detail">Santorini Island</string>
    <string name="forgot">Forgot Password</string>
    <string name="deskripsi4">We will send you email verification to make sure the authentication</string>
    <string name="send">Send Verification</string>
    <string name="reset">Reset Password</string>
    <string name="deskripsi3">"Reset your Password and make strong. "</string>
    <string name="password_conf">Password Confirmation</string>
    <string name="change">Change Password</string>
    <string name="password_requirement">Password Requirement:</string>
    <string name="const_text_auth_question_login">Need an account?</string>
    <string name="const_text_register"><u>Create One</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="requirement1">"At least 8 Characters "</string>
    <string name="requirement2">No Part Of your Username</string>
    <string name="requirement3">Your Password Cannot Be any your last 4\nPasswords.</string>
    <string name="headline">Explore the\nBeautiful world!</string>
    <string name="recommend">Recommend</string>
    <string name="show_more">Show more ›</string>
    <string name="people_liked">People Liked</string>
    <string name="sign_in">Sign In</string>
    <string name="category">Category</string>
    <string name="nearest_place">Nearest Place</string>
    <string name="success">Success!</string>
    <string name="deskripsi2">Congratulations! You have been succesfull update your password</string>
    <string name="continue1">Continue</string>
    <string name="continue2">Continue</string>
    <string name="your_name">Your Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="travel_preferences">Travel Preferences</string>
    <string name="full_name">Full Name</string>
    <string name="back_button">Back</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="change1">Save Changes</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="explore_the_nbeauty_of_indonesia">Explore the\nBeauty of Indonesia!</string>
    <string name="selamat_datang_n_username">Selamat Datang,\n Username</string>
    <string name="overview_1">Taman Pintar Yogyakarta (bahasa Jawa: Hanacaraka,ꦠꦩꦤ꧀​ꦥꦶꦤ꧀ꦠꦂ​ꦔꦪꦺꦴꦒꦾꦏꦂꦠ, Taman Pintar Ngayogyakarta) adalah wahana wisata yang terdapat di pusat Kota Yogyakarta, tepatnya di Jalan Panembahan Senopati No. 1-3, Yogyakarta, di kawasan Benteng Vredeburg. Taman ini memadukan tempat wisata rekreasi maupun edukasi dalam satu lokasi. Taman Pintar memiliki arena bermain sekaligus sarana edukasi yang terbagi dalam beberapa zona. Akses langsung kepada pusat buku eks Shopping Centre juga menambah nilai lebih Taman Pintar. Tempat rekreasi ini sangat baik untuk anak-anak pada masa perkembangan.\nBeberapa tahun ini Taman Pintar menjadi alternatif tempat berwisata bagi masyarakat Yogyakarta maupun luar kota.Taman ini, khususnya pada wahana pendidikan anak usia dini dilengkapi dengan teknologi interaktif digital serta pemetaan video yang akan memacu imajinasi anak serta ketertarikan mereka terhadap teknologi. Pada saat ini ada 35 zona dan 3.500 alat peraga permainan yang edukatif.</string>
</resources>