<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.updatepw.UpdatePasswordActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="345dp"
        android:layout_height="312dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/banner_update_password"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        style="@style/SubTittle.DestinAsyik"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Deskripsi.DestinAsyik"
        android:layout_width="347dp"
        android:layout_height="22dp"
        android:text="@string/deskripsi3"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/button3"
        android:layout_width="349dp"
        android:layout_height="57dp"
        android:layout_marginBottom="3dp"
        android:backgroundTint="#336749"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/change"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/password_confirmation"
        app:layout_constraintVertical_bias="0.82" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_requirement"
        android:fontFamily="@font/inter_semibold"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/password_confirmation"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/password_conf"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#9A9A9A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/password_input"
        app:layout_constraintStart_toStartOf="@+id/password_input"
        app:layout_constraintTop_toBottomOf="@+id/password_input" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="350dp"
        android:layout_height="52dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="#9A9A9A"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


</androidx.constraintlayout.widget.ConstraintLayout>