<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ui.register.RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/username"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#9A9A9A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />



        <TextView
            android:id="@+id/textView2"
            style="@style/Tittle.DestinAsyik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tittle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:srcCompat="@drawable/banner_register"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/textView3"
            style="@style/SubTittle.DestinAsyik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_Up"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView4"
            style="@style/Deskripsi.DestinAsyik"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskripsi_reg"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColor="#9A9A9A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/etUsername"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <EditText
            android:id="@+id/password_confirmation"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/password_conf"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#9A9A9A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/password_input"
            app:layout_constraintTop_toBottomOf="@+id/password_input" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColor="#9A9A9A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/etEmail"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />


        <EditText
            android:id="@+id/etFullName"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textColor="#9A9A9A"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="@+id/password_confirmation"
            app:layout_constraintTop_toBottomOf="@+id/password_confirmation" />

        <EditText
            android:id="@+id/etBorn"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_corner"
            android:drawableStart="@drawable/date"
            android:drawablePadding="8dp"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="date_of_birth"
            android:inputType="date"
            android:padding="15dp"
            android:textColor="#9A9A9A"
            android:textSize="18sp"
            android:focusable="false"
            android:clickable="true"
            app:layout_constraintEnd_toEndOf="@+id/etFullName"
            app:layout_constraintStart_toStartOf="@+id/etFullName"
            app:layout_constraintTop_toBottomOf="@+id/etFullName" />

        <EditText
            android:id="@+id/etCity"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/rounded_corner"
            android:ems="10"
            android:fontFamily="@font/inter_regular"
            android:hint="@string/city"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:textColor="#9A9A9A"
            android:textColorHint="#9A9A9A"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@+id/etBorn"
            app:layout_constraintStart_toStartOf="@+id/etBorn"
            app:layout_constraintTop_toBottomOf="@+id/etBorn" />

        <!-- Add the Spinner for Travel Preferences -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown"
            style="@style/Widget.Material3.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:hint="Travel Preferences"
            app:boxStrokeWidth="0dp"
            app:layout_constraintTop_toBottomOf="@+id/etCity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:startIconContentDescription="Username"
            >

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/typePreferences"
                android:background="@drawable/rounded_corner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:fontFamily="@font/inter_regular"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Tambahan Button Register -->
        <Button
            android:id="@+id/button_register"
            android:layout_width="348dp"
            android:layout_height="52dp"
            android:layout_marginTop="12dp"
            android:backgroundTint="#336749"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/register"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dropdown" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/button_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/or"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:id="@+id/container_misc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/label_signin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:text="Already have an account?"
                android:textColor="#6C6C6C"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btn_signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter_regular"
                android:padding="10dp"
                android:text="Sign In"
                android:textColor="#367AFF"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
